[gd_scene load_steps=3 format=3 uid="uid://bppo7ln657qhh"]

[ext_resource type="FontFile" uid="uid://cwo2tc2qtq41u" path="res://karmatic-arcade/ka1.ttf" id="1_2a2m1"]
[ext_resource type="Script" path="res://scripts/choose_mode.gd" id="1_vymrq"]

[node name="choose_mode" type="Node2D"]
script = ExtResource("1_vymrq")

[node name="BackGround" type="ColorRect" parent="."]
offset_right = 1200.0
offset_bottom = 720.0
color = Color(0.980392, 0.580392, 0.584314, 1)

[node name="Test_Track" type="CanvasLayer" parent="."]

[node name="Test_Track" type="Label" parent="Test_Track"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = 56.0
offset_top = 24.0
offset_right = 540.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("1_2a2m1")
theme_override_font_sizes/font_size = 80
text = "Test Track
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lines" type="Node2D" parent="Test_Track/Test_Track"]
position = Vector2(85, 0)

[node name="Line" type="ColorRect" parent="Test_Track/Test_Track/Lines"]
offset_left = -109.0
offset_top = 100.0
offset_right = 579.0
offset_bottom = 116.0

[node name="Line2" type="ColorRect" parent="Test_Track/Test_Track/Lines"]
offset_left = -109.0
offset_top = -16.0
offset_right = 579.0

[node name="Line4" type="ColorRect" parent="Test_Track/Test_Track/Lines"]
offset_left = 579.0
offset_right = 681.0
offset_bottom = 16.0
rotation = 1.5708

[node name="Line5" type="ColorRect" parent="Test_Track/Test_Track/Lines"]
offset_left = -93.0
offset_right = 9.0
offset_bottom = 16.0
rotation = 1.5708

[node name="Free_Ride" type="CanvasLayer" parent="."]

[node name="Free_Ride" type="Label" parent="Free_Ride"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_top = 160.0
offset_right = 419.0
offset_bottom = 236.0
theme_override_fonts/font = ExtResource("1_2a2m1")
theme_override_font_sizes/font_size = 45
text = "Free ride"
horizontal_alignment = 1

[node name="Lines" type="Node2D" parent="Free_Ride/Free_Ride"]
position = Vector2(85, 0)

[node name="Line" type="ColorRect" parent="Free_Ride/Free_Ride/Lines"]
offset_left = -53.0
offset_top = 56.0
offset_right = 307.0
offset_bottom = 72.0

[node name="Line2" type="ColorRect" parent="Free_Ride/Free_Ride/Lines"]
offset_left = -53.0
offset_top = -16.0
offset_right = 307.0

[node name="Line4" type="ColorRect" parent="Free_Ride/Free_Ride/Lines"]
offset_left = 307.0
offset_right = 374.0
offset_bottom = 16.0
rotation = 1.5708

[node name="Line5" type="ColorRect" parent="Free_Ride/Free_Ride/Lines"]
offset_left = -37.0
offset_right = 35.0
offset_bottom = 16.0
rotation = 1.5708

[node name="Time_Challenge" type="CanvasLayer" parent="."]

[node name="Time Challenge" type="Label" parent="Time_Challenge"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -32.0
offset_top = 256.0
offset_right = 634.0
offset_bottom = 332.0
theme_override_fonts/font = ExtResource("1_2a2m1")
theme_override_font_sizes/font_size = 45
text = "time challenge"
horizontal_alignment = 1

[node name="Lines" type="Node2D" parent="Time_Challenge/Time Challenge"]
position = Vector2(85, 0)

[node name="Line" type="ColorRect" parent="Time_Challenge/Time Challenge/Lines"]
offset_left = -21.0
offset_top = 56.0
offset_right = 523.0
offset_bottom = 72.0

[node name="Line2" type="ColorRect" parent="Time_Challenge/Time Challenge/Lines"]
offset_left = -21.0
offset_top = -16.0
offset_right = 523.0

[node name="Line4" type="ColorRect" parent="Time_Challenge/Time Challenge/Lines"]
offset_left = 523.0
offset_top = -8.0
offset_right = 602.0
offset_bottom = 8.0
rotation = 1.5708

[node name="Line5" type="ColorRect" parent="Time_Challenge/Time Challenge/Lines"]
offset_left = -5.0
offset_top = -8.0
offset_right = 75.0
offset_bottom = 8.0
rotation = 1.5708

[node name="Time_attack" type="CanvasLayer" parent="."]

[node name="Time_attack" type="Label" parent="Time_attack"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = -16.0
offset_top = 352.0
offset_right = 491.0
offset_bottom = 428.0
theme_override_fonts/font = ExtResource("1_2a2m1")
theme_override_font_sizes/font_size = 45
text = "Time attack"
horizontal_alignment = 1

[node name="Lines" type="Node2D" parent="Time_attack/Time_attack"]
position = Vector2(85, 0)

[node name="Line" type="ColorRect" parent="Time_attack/Time_attack/Lines"]
offset_left = -37.0
offset_top = 56.0
offset_right = 379.0
offset_bottom = 72.0

[node name="Line2" type="ColorRect" parent="Time_attack/Time_attack/Lines"]
offset_left = -37.0
offset_top = -16.0
offset_right = 379.0

[node name="Line4" type="ColorRect" parent="Time_attack/Time_attack/Lines"]
offset_left = 379.0
offset_top = -8.0
offset_right = 456.0
offset_bottom = 8.0
rotation = 1.5708

[node name="Line5" type="ColorRect" parent="Time_attack/Time_attack/Lines"]
offset_left = -21.0
offset_top = -16.0
offset_right = 60.0
rotation = 1.5708

[node name="Drift" type="CanvasLayer" parent="."]

[node name="Drift" type="Label" parent="Drift"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = 24.0
offset_top = 448.0
offset_right = 261.0
offset_bottom = 524.0
theme_override_fonts/font = ExtResource("1_2a2m1")
theme_override_font_sizes/font_size = 45
text = "Drift"
horizontal_alignment = 1

[node name="Lines" type="Node2D" parent="Drift/Drift"]
position = Vector2(85, 0)

[node name="Line" type="ColorRect" parent="Drift/Drift/Lines"]
offset_left = -77.0
offset_top = 56.0
offset_right = 147.0
offset_bottom = 72.0

[node name="Line2" type="ColorRect" parent="Drift/Drift/Lines"]
offset_left = -77.0
offset_top = -16.0
offset_right = 147.0

[node name="Line4" type="ColorRect" parent="Drift/Drift/Lines"]
offset_left = 147.0
offset_top = -8.0
offset_right = 224.0
offset_bottom = 8.0
rotation = 1.5708

[node name="Line5" type="ColorRect" parent="Drift/Drift/Lines"]
offset_left = -61.0
offset_top = -16.0
offset_right = 20.0
rotation = 1.5708

[node name="Race" type="CanvasLayer" parent="."]

[node name="Race" type="Label" parent="Race"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = 16.0
offset_top = 544.0
offset_right = 236.0
offset_bottom = 620.0
theme_override_fonts/font = ExtResource("1_2a2m1")
theme_override_font_sizes/font_size = 45
text = " VS AI
"
horizontal_alignment = 1

[node name="Lines" type="Node2D" parent="Race/Race"]
position = Vector2(85, 0)

[node name="Line" type="ColorRect" parent="Race/Race/Lines"]
offset_left = -69.0
offset_top = 56.0
offset_right = 131.0
offset_bottom = 72.0

[node name="Line2" type="ColorRect" parent="Race/Race/Lines"]
offset_left = -69.0
offset_top = -16.0
offset_right = 131.0

[node name="Line4" type="ColorRect" parent="Race/Race/Lines"]
offset_left = 131.0
offset_top = -8.0
offset_right = 208.0
offset_bottom = 8.0
rotation = 1.5708

[node name="Line5" type="ColorRect" parent="Race/Race/Lines"]
offset_left = -53.0
offset_top = -16.0
offset_right = 28.0
rotation = 1.5708

[node name="Main_menu" type="CanvasLayer" parent="."]

[node name="Main_menu" type="Label" parent="Main_menu"]
modulate = Color(0.160784, 0.0862745, 0.113725, 1)
offset_left = 400.0
offset_top = 632.0
offset_right = 819.0
offset_bottom = 708.0
theme_override_fonts/font = ExtResource("1_2a2m1")
theme_override_font_sizes/font_size = 45
text = "main menu
"
horizontal_alignment = 1

[node name="Lines" type="Node2D" parent="Main_menu/Main_menu"]
position = Vector2(85, 0)

[node name="Line" type="ColorRect" parent="Main_menu/Main_menu/Lines"]
offset_left = -61.0
offset_top = 56.0
offset_right = 315.0
offset_bottom = 72.0

[node name="Line2" type="ColorRect" parent="Main_menu/Main_menu/Lines"]
offset_left = -61.0
offset_top = -16.0
offset_right = 315.0

[node name="Line4" type="ColorRect" parent="Main_menu/Main_menu/Lines"]
offset_left = 315.0
offset_top = -8.0
offset_right = 392.0
offset_bottom = 8.0
rotation = 1.5708

[node name="Line5" type="ColorRect" parent="Main_menu/Main_menu/Lines"]
offset_left = -45.0
offset_top = -16.0
offset_right = 36.0
rotation = 1.5708
